<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ccalc.silk.ccalc.MainActivity">

    <EditText

        android:id="@+id/number_n"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/n"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <EditText
        android:id="@+id/number_k"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/k"
        android:inputType="number"

        app:layout_constraintLeft_toRightOf="@+id/number_n"
        app:layout_constraintTop_toBottomOf="parent"
        />


    <Button
        android:id="@+id/button_c"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/comb"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_n"/>


    <Button
        android:id="@+id/button_co"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/comb_o"
        app:layout_constraintTop_toBottomOf="@+id/number_n"
        app:layout_constraintLeft_toRightOf="@+id/button_c"
        />



    <Button
        android:id="@+id/button_v"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/vari"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_c" />



    <Button
        android:id="@+id/button_vo"
        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/vari_o"
        app:layout_constraintTop_toBottomOf="@+id/button_c"
        app:layout_constraintLeft_toRightOf="@+id/button_v"
        />


    <TextView
        android:id="@+id/vysledok1"

        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        android:text="@string/result"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_v"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />


    <TextView
        android:id="@+id/vysledok"
        android:textIsSelectable="true"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        android:text="@string/info"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vysledok1"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />



    <TextView
        android:id="@+id/textView"
        android:layout_height="200dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/help"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vysledok"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_width="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />


</android.support.constraint.ConstraintLayout>
